objects/Account__x.object
<CustomObject>
    <fields>
        <fullName>Salutation__c</fullName>
        <externalDeveloperName>Salutation</externalDeveloperName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SatCloseHour_c__c</fullName>
        <externalDeveloperName>SatCloseHour__c</externalDeveloperName>
        <label>Sat Close Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SatOpenHour_c__c</fullName>
        <externalDeveloperName>SatOpenHour__c</externalDeveloperName>
        <label>Sat Open Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SellingDealer_TXT_c__c</fullName>
        <externalDeveloperName>SellingDealer_TXT__c</externalDeveloperName>
        <label>Selling Dealer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_Customer_Acknowledgement_Email_F__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Send_Customer_Acknowledgement_Email_Flag__c</externalDeveloperName>
        <label>Send Customer Acknowledgement Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Invalid_Information_notification__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Send_Invalid_Information_notification__c</externalDeveloperName>
        <label>Send Invalid Information notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Product_Missing_Notification_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Send_Product_Missing_Notification__c</externalDeveloperName>
        <label>Send Product Missing Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_confirmation_interest_notificati__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Send_confirmation_interest_notification__c</externalDeveloperName>
        <label>Send Confirm Interest Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_to_Urban_Science_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Send_to_Urban_Science_Flag__c</externalDeveloperName>
        <label>Send to Urban Science</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SequenceNumber_NUM_pc__c</fullName>
        <externalDeveloperName>SequenceNumber_NUM__pc</externalDeveloperName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceDealer_TXT_c__c</fullName>
        <externalDeveloperName>ServiceDealer_TXT__c</externalDeveloperName>
        <label>Service Dealer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Scheduling_URL_c__c</fullName>
        <externalDeveloperName>Service_Scheduling_URL__c</externalDeveloperName>
        <label>Service Scheduling URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ShippingAddress__c</fullName>
        <externalDeveloperName>ShippingAddress</externalDeveloperName>
        <label>Shipping Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <externalDeveloperName>ShippingCity</externalDeveloperName>
        <label>Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <externalDeveloperName>ShippingCountry</externalDeveloperName>
        <label>Shipping Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingGeocodeAccuracy__c</fullName>
        <externalDeveloperName>ShippingGeocodeAccuracy</externalDeveloperName>
        <label>Shipping Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                    <label>Near Address</label>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                    <label>Extended Zip</label>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingLatitude__c</fullName>
        <externalDeveloperName>ShippingLatitude</externalDeveloperName>
        <label>Shipping Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingLongitude__c</fullName>
        <externalDeveloperName>ShippingLongitude</externalDeveloperName>
        <label>Shipping Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingPostalCode__c</fullName>
        <externalDeveloperName>ShippingPostalCode</externalDeveloperName>
        <label>Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <externalDeveloperName>ShippingState</externalDeveloperName>
        <label>Shipping State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <externalDeveloperName>ShippingStreet</externalDeveloperName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SicDesc__c</fullName>
        <externalDeveloperName>SicDesc</externalDeveloperName>
        <label>SIC Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sic__c</fullName>
        <externalDeveloperName>Sic</externalDeveloperName>
        <label>SIC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <externalDeveloperName>Site</externalDeveloperName>
        <label>Account Site</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_c__c</fullName>
        <externalDeveloperName>Start_Date__c</externalDeveloperName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State_c__c</fullName>
        <externalDeveloperName>State__c</externalDeveloperName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubDiv_TXT_pc__c</fullName>
        <externalDeveloperName>SubDiv_TXT__pc</externalDeveloperName>
        <label>SubDivision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acura</fullName>
                </value>
                <value>
                    <fullName>Engine</fullName>
                </value>
                <value>
                    <fullName>Honda</fullName>
                </value>
                <value>
                    <fullName>Marine</fullName>
                </value>
                <value>
                    <fullName>Motorcycle</fullName>
                </value>
                <value>
                    <fullName>PowerEquipment</fullName>
                    <label>Power Equipment</label>
                </value>
                <value>
                    <fullName>NSX</fullName>
                </value>
                <value>
                    <fullName>HRC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubDivision_TXT_c__c</fullName>
        <externalDeveloperName>SubDivision_TXT__c</externalDeveloperName>
        <label>Sub Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acura</fullName>
                </value>
                <value>
                    <fullName>Engine</fullName>
                </value>
                <value>
                    <fullName>Honda</fullName>
                </value>
                <value>
                    <fullName>Marine</fullName>
                </value>
                <value>
                    <fullName>Motorcycle</fullName>
                </value>
                <value>
                    <fullName>PowerEquipment</fullName>
                    <label>Power Equipment</label>
                </value>
                <value>
                    <fullName>NSX</fullName>
                </value>
                <value>
                    <fullName>HRC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <externalDeveloperName>Suffix</externalDeveloperName>
        <label>Suffix</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix_pc__c</fullName>
        <externalDeveloperName>Suffix__pc</externalDeveloperName>
        <label>Suffix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SunCloseHour_c__c</fullName>
        <externalDeveloperName>SunCloseHour__c</externalDeveloperName>
        <label>Sun Close Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SunOpenHour_c__c</fullName>
        <externalDeveloperName>SunOpenHour__c</externalDeveloperName>
        <label>Sun Open Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS_SurveyReminder_pc__c</fullName>
        <externalDeveloperName>TIMBASURVEYS__SurveyReminder__pc</externalDeveloperName>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS_Survey_pc__c</fullName>
        <externalDeveloperName>TIMBASURVEYS__Survey__pc</externalDeveloperName>
        <label>Survey</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS_reminderStringSize_pc__c</fullName>
        <externalDeveloperName>TIMBASURVEYS__reminderStringSize__pc</externalDeveloperName>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ThuCloseHour_c__c</fullName>
        <externalDeveloperName>ThuCloseHour__c</externalDeveloperName>
        <label>Thu Close Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThuOpenHour_c__c</fullName>
        <externalDeveloperName>ThuOpenHour__c</externalDeveloperName>
        <label>Thu Open Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TickerSymbol__c</fullName>
        <externalDeveloperName>TickerSymbol</externalDeveloperName>
        <label>Ticker Symbol</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone_c__c</fullName>
        <externalDeveloperName>Timezone__c</externalDeveloperName>
        <label>Timezone Offset From GMT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone_pc__c</fullName>
        <externalDeveloperName>Timezone__pc</externalDeveloperName>
        <label>Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific (PST)</fullName>
                </value>
                <value>
                    <fullName>Mountain(MST)</fullName>
                </value>
                <value>
                    <fullName>Central (CST)</fullName>
                </value>
                <value>
                    <fullName>Eastern (EST)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TriggerType_TXT_c__c</fullName>
        <externalDeveloperName>TriggerType_TXT__c</externalDeveloperName>
        <label>Trigger Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>instant</fullName>
                </value>
                <value>
                    <fullName>future</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TueCloseHour_c__c</fullName>
        <externalDeveloperName>TueCloseHour__c</externalDeveloperName>
        <label>Tue Close Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TueOpenHour_c__c</fullName>
        <externalDeveloperName>TueOpenHour__c</externalDeveloperName>
        <label>Tue Open Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_ID_pc__c</fullName>
        <externalDeveloperName>Type_ID__pc</externalDeveloperName>
        <label>Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <externalDeveloperName>Type</externalDeveloperName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Integrator</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VehicleBrand_TXT_c__c</fullName>
        <externalDeveloperName>VehicleBrand_TXT__c</externalDeveloperName>
        <label>Vehicle Brand</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vehicle_Reserve_Setup_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Vehicle_Reserve_Setup__c</externalDeveloperName>
        <label>Vehicle Reserve Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VendorCode_CD_c__c</fullName>
        <externalDeveloperName>VendorCode_CD__c</externalDeveloperName>
        <label>Vendor Code</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ViewOpportunityScore_FLG_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ViewOpportunityScore_FLG__pc</externalDeveloperName>
        <label>View Opportunity Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_URL_c__c</fullName>
        <externalDeveloperName>Website_URL__c</externalDeveloperName>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <externalDeveloperName>Website</externalDeveloperName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WebtoLeadAllowed_FLG_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>WebtoLeadAllowed_FLG__c</externalDeveloperName>
        <label>Web-to-Lead Allowed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WedCloseHour_c__c</fullName>
        <externalDeveloperName>WedCloseHour__c</externalDeveloperName>
        <label>Wed Close Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WedOpenHour_c__c</fullName>
        <externalDeveloperName>WedOpenHour__c</externalDeveloperName>
        <label>Wed Open Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_c__c</fullName>
        <externalDeveloperName>Zone__c</externalDeveloperName>
        <label>Zone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCRM_setup_complete_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>eCRM_setup_complete__c</externalDeveloperName>
        <label>Is Sent To eCRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5_HasOptedOutOfMobile_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>et4ae5__HasOptedOutOfMobile__pc</externalDeveloperName>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5_Mobile_Country_Code_pc__c</fullName>
        <externalDeveloperName>et4ae5__Mobile_Country_Code__pc</externalDeveloperName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>schedule_installation_c__c</fullName>
        <externalDeveloperName>schedule_installation__c</externalDeveloperName>
        <label>Service Scheduling URL</label>
        <type>Url</type>
    </fields>
    <label>Account Ext</label>
    <pluralLabel>Accounts Ext</pluralLabel>
</CustomObject>